--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -28,6 +28,7 @@
         android:layout_alignTop="@+id/button"
         android:layout_marginEnd="19dp"
         android:layout_marginRight="19dp"
+        android:onClick="captureImage"
         android:text="Capture" />
 
     <FrameLayout
